# etnn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  kill.sh  local.sh  local_worker.sh  run_multi_worker.sh  run_server.sh  run_worker.sh
examples/: CMakeLists.txt  json_mnist_mlp.cpp  mnist_mlp.cpp  mnist_mlp_distributed.cpp  net.cpp
include/etnn/: etnn.h
json/: mnist.json
src/: CMakeLists.txt  base.h  dataset.cpp  dataset.h  device.h  network.cpp  network.h  network_distibuted.cpp  network_distibuted.h  parser.cpp  parser.h  tensor.cpp  tensor.h  utils.cpp  utils.h
src/distributed/: dist_worker.h  sgd_dist_server.h
src/initializer/: constant.cu  initializer.h  rand_normal.cpp  rand_uniform.cpp
src/layer/: activation.cpp  activation.h  conv2D.cpp  conv2D.h  data_input.cpp  data_input.h  dense.cpp  dense.h  input.cpp  input.h  layer.cpp  layer.h  loss_layer.cpp  loss_layer.h  softmax.cpp  softmax.h
src/loss/: cross_entropy.cu  cross_entropy.h  loss.cpp  loss.h
src/metric/: accuracy.cpp  metric.cpp  metric.h
src/op/: conv.cpp  conv.h  op.cpp  op.h
tests/: CMakeLists.txt  cublas.cpp  dataset.cpp  initial.cpp  json.cpp  softmax.cpp  tensor.cpp
